# GreenThumb

./: .gitignore  pyproject.toml
HPI/GeneratedClient/: GeneratedClient.h
HPI/HPI/: HPIApp.swift  NavigationDestination.swift
HPI/HPI.xcodeproj/: project.pbxproj
HPI/HPI.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
HPI/HPI.xcodeproj/project.xcworkspace/xcuserdata/james.xcuserdatad/: UserInterfaceState.xcuserstate
HPI/HPI.xcodeproj/xcuserdata/james.xcuserdatad/xcschemes/: xcschememanagement.plist
HPI/HPI/API/: APIEnvironment.swift  MockPlant.swift  MockPlantAPI.swift  PlantAPI.swift  RealPlantAPI.swift
HPI/HPI/Extensions/: View+withErrorHandling.swift
HPI/HPI/Models/: ErrorHandling.swift  LatestData.swift  Plant.swift
HPI/HPI/Views/: PlantDetailScreen.swift  PlantImage.swift  PlantListTile.swift  PlantMessage.swift  PlantsScreen.swift  Router.swift
arduino_code/: arduino_code.ino
green_thumb/: main.py  proc.py
green_thumb/api/: __init__.py
green_thumb/api/v1/: __init__.py  plant.py
green_thumb/common/db/: __init__.py  models.py  schemas.py
green_thumb/db/: __init__.py  models.py  schemas.py
green_thumb/lorax/: __init__.py  emotion.py  emotions.py  hpi.py  proc.py
