[tool.poetry]
name = "green_thumb"
version = "0.1.0"
description = ""
authors = ["dthelegend <me@daudi.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.23"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy-utils = "^0.41.1"
pydantic = "^2.5.2"
llama-cpp-python = "^0.2.19"
pyserial = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "green_thumb.api:main"
lorax = "green_thumb.lorax:main"